[workspace]
members = [
"crates/vola-ast",
"crates/rvsdg",
"crates/rvsdg-viewer",
"crates/vola-common",
"crates/vola-opt",
"examples/runtime-patch",
"examples/rvsdg-simple", "crates/rvsdg-derive-lang",
]

resolver = "2"

[workspace.dependencies]
tree-sitter = "0.20.10"
thiserror = "1.0.44"
ahash = "0.8.7"
slotmap = "1.0"
graphviz-rust = "0.7.1"
backtrace = "0.3.69"
lazy_static = "1.4.0"
smallvec = "1.11.2"
smallstr = "0.3.0"
serde-lexpr = "0.1.3"
serde = "1.0.196"
miette = "7.1"
log = "0.4"
pretty_env_logger = "0.5"
