[workspace]
members = [
"crates/vola-ast",
"crates/rvsdg",
"crates/rvsdg-viewer",
"crates/vola-common",
"crates/vola-opt",
"examples/rvsdg-simple", 
"crates/rvsdg-derive-lang", 
"crates/vola-backend-spirv", 
"crates/volac", 
"crates/vola-cli", 
"crates/rvsdg-viewer-ui", 
"crates/vola-tree-sitter-parser",
]

resolver = "2"

[workspace.dependencies]
tree-sitter = "0.20.10"
thiserror = "1.0.44"
ahash = "0.8.7"
slotmap = "1.0"
graphviz-rust = "0.7.1"
backtrace = "0.3.69"
lazy_static = "1.4.0"
smallvec = "1.11.2"
smallstr = "0.3.0"
serde-lexpr = "0.1.3"
serde = "1.0.196"
log = "0.4"
pretty_env_logger = "0.5"
rspirv = "0.12.0"
clap = "4.5.3"
bytemuck = "1.15.0"
macroquad = "0.4.4"
glam = "0.27"
bincode = "1.3.3"
ariadne = "0.4.1"
small-map = "0.1.3"
