[package]
name = "rvsdg-viewer"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rvsdg = {path = "../rvsdg"}
ahash.workspace = true
priority-queue = "1.3.2"
log.workspace = true
serde = {workspace = true, features = ["derive"]}
glam = {workspace = true, features = ["serde", "mint"]}
