[package]
name = "vola-ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dot"]
dot = ["graphviz-rust"]

[dependencies]
tree-sitter-vola = {path = "../tree-sitter-vola"}
vola-common = {path = "../vola-common"}
thiserror.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
tinyvec.workspace = true
graphviz-rust = {workspace = true, optional = true}
backtrace.workspace = true
annotate-snippets.workspace = true
lazy_static = "1.4.0"
