[package]
name = "vola-ast"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tendsin Mende"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dot", "serde"]
serde = ["dep:serde"]
dot = ["vola-common/dot"]

[dependencies]
#tree-sitter-vola = {git = "https://gitlab.com/tendsinmende/tree-sitter-vola.git"}
tree-sitter-vola = {path = "../../../tree-sitter-vola"}
vola-common = {path = "../vola-common"}
thiserror.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
graphviz-rust = {workspace = true, optional = true}
backtrace.workspace = true
lazy_static.workspace = true
smallvec = {workspace = true, features = ["serde"]}
serde = {workspace = true, optional = true}
