[package]
name = "vola-ast"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tendsin Mende"]
readme = "crates/vola-ast/README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]
serde = ["dep:serde"]
dot = ["vola-common/dot", "graphviz-rust"]

[dependencies]
vola-common.workspace = true
thiserror.workspace = true
ahash.workspace = true
graphviz-rust = { workspace = true, optional = true }
backtrace.workspace = true
lazy_static.workspace = true
smallvec = { workspace = true, features = ["serde"] }
serde = { workspace = true, optional = true }


[dev-dependencies]
vola-tree-sitter-parser.workspace = true


[[example]]
name = "simple_csg"
required-features = ["serde", "dot"]
