[package]
name = "vola-backend-wasm"
version = "0.1.0"
edition = "2021"

[features]
default = ["viewer"]

viewer = ["rvsdg-viewer"]

[dependencies]
thiserror.workspace = true

vola-opt = { path = "../vola-opt" }
vola-common = { path = "../vola-common" }
rvsdg = { path = "../rvsdg" }
rvsdg-viewer = { path = "../rvsdg-viewer", optional = true }
walrus.workspace = true


[dev-dependencies]
