[package]
name = "vola-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dot"]
dot = ["graphviz-rust"]

[dependencies]
thiserror.workspace = true
backtrace.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
smallvec.workspace = true
smallstr = {workspace = true, features = ["serde"]}
serde = {workspace = true, features = ["derive"]}
serde-lexpr.workspace = true
graphviz-rust = {workspace = true, optional = true}
miette = {workspace = true, features = ["fancy"]}
lazy_static.workspace = true
