[package]
name = "vola-common"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tendsin Mende"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
dot = ["graphviz-rust"]

[dependencies]
thiserror.workspace = true
backtrace.workspace = true
tree-sitter.workspace = true
ahash = { workspace = true, features = ["serde"] }
smallvec = { workspace = true, features = ["serde"] }
smallstr = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde-lexpr.workspace = true
graphviz-rust = { workspace = true, optional = true }
lazy_static.workspace = true
rvsdg-viewer.workspace = true
ariadne = { workspace = true, features = ["auto-color"] }
