[package]
name = "vola-hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["dot"]
dot = ["graphviz-rust"]

[dependencies]
vola-ast = {path = "../vola-ast"}
ahash.workspace = true
tinyvec.workspace = true
slotmap.workspace = true
graphviz-rust = {workspace = true, optional = true}
