[package]
name = "vola-hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
vola-ast = {path = "../vola-ast"}
vola-common = {path = "../vola-common"}
rvsdg = {path = "../rvsdg"}
ahash.workspace = true
tinyvec.workspace = true
slotmap.workspace = true
thiserror.workspace = true
