[package]
name = "vola-lib"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Library interface to the Vola compiler."

[features]
default = ["spirv", "wasm"]
spirv = ["vola-backend-spirv", "bytemuck"]
wasm = ["vola-backend-wasm"]


[dependencies]
vola-ast.workspace = true
vola-tree-sitter-parser.workspace = true
vola-opt.workspace = true
rvsdg.workspace = true
vola-backend-spirv = { workspace = true, optional = true }
vola-backend-wasm = { workspace = true, optional = true }
vola-common.workspace = true
bytemuck = {workspace = true, optional = true}
