[package]
name = "vola-opt"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tendsin Mende"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["viewer", "profile"]
viewer = ["rvsdg-viewer"]
profile = []

[dependencies]
rvsdg = {path = "../rvsdg"}
rvsdg-viewer = {path = "../rvsdg-viewer", optional = true}
vola-ast = {path = "../vola-ast"}
vola-common = {path = "../vola-common"}
ahash.workspace = true

[dev-dependencies]
pretty_env_logger.workspace = true
