[package]
name = "vola-opt"
version = "0.2.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tendsin Mende"]
readme = "crates/vola-opt/README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["viewer", "log"]
viewer = ["rvsdg-viewer"]
profile = []
log = ["dep:log"]

[dependencies]
rvsdg = { path = "../rvsdg" }
rvsdg-viewer = { path = "../rvsdg-viewer", optional = true }
vola-ast = { path = "../vola-ast" }
vola-common = { path = "../vola-common" }
ahash.workspace = true
log = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger.workspace = true
