[package]
name = "vola-opt"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tendsin Mende"]
readme = "crates/vola-opt/README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["viewer", "log"]
viewer = ["rvsdg-viewer"]
profile = []
log = ["dep:log"]

[dependencies]
rvsdg.workspace = true
rvsdg-viewer = { workspace = true, optional = true }
vola-ast.workspace = true
vola-common.workspace = true
ahash.workspace = true
log = { workspace = true, optional = true }

[dev-dependencies]
pretty_env_logger.workspace = true
