[package]
name = "vola-tree-sitter-openscad"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter-openscad = { git = "https://github.com/SiebenCorgie/tree-sitter-openscad.git", branch = "update-tree-sitter-0-25-3" }
vola-ast.workspace = true
vola-common.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
smallvec.workspace = true
color-art = "0.3"
