[package]
name = "vola-tree-sitter-parser"
version = "0.3.0"
edition = "2021"

[features]
default = []
dot = ["vola-common/dot", "graphviz-rust"]

[dependencies]
tree-sitter-vola = { git = "https://gitlab.com/tendsinmende/tree-sitter-vola.git", rev = "e9fd6b15688c80f31a45d1f394f2be0517b94e26" }
vola-ast.workspace = true
vola-common.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
graphviz-rust = { workspace = true, optional = true }
backtrace.workspace = true
lazy_static.workspace = true
smallvec = { workspace = true, features = ["serde"] }
serde = { workspace = true, optional = true }
