[package]
name = "vola-tree-sitter-parser"
version = "0.3.0"
edition = "2021"

[features]
default = []
dot = ["vola-common/dot", "graphviz-rust"]

[dependencies]
tree-sitter-vola = { git = "https://gitlab.com/tendsinmende/tree-sitter-vola.git", rev = "297c629d2eacc8877380116c937d900d6990deb3" }
vola-ast.workspace = true
vola-common.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
graphviz-rust = { workspace = true, optional = true }
backtrace.workspace = true
lazy_static.workspace = true
smallvec = { workspace = true, features = ["serde"] }
serde = { workspace = true, optional = true }
