[package]
name = "vola-tree-sitter-parser"
version = "0.3.0"
edition = "2024"

[features]
default = []
dot = ["vola-common/dot", "graphviz-rust"]

[dependencies]
tree-sitter-vola = { git = "https://gitlab.com/tendsinmende/tree-sitter-vola.git", rev = "6a7c2f426418445ccc60c02dcebb43dc7f0be037" }
vola-ast.workspace = true
vola-common.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
ahash.workspace = true
graphviz-rust = { workspace = true, optional = true }
backtrace.workspace = true
lazy_static.workspace = true
smallvec = { workspace = true, features = ["serde"] }
serde = { workspace = true, optional = true }
