[package]
name = "volac"
version = "0.3.0"
edition = "2021"
license = "MPL-2.0"


[features]
default = ["wasm", "spirv", "native"]
dot = ["vola-ast/dot", "vola-common/dot"]
native = ["vola-backend-wasm", "wasm", "wasmtime"]
wasm = ["vola-backend-wasm"]
spirv = ["vola-backend-spirv"]

[dependencies]
vola-ast.workspace = true
vola-tree-sitter-parser.workspace = true
vola-opt.workspace = true
vola-backend-spirv = { workspace = true, optional = true }
vola-backend-wasm = { workspace = true, optional = true }
vola-common.workspace = true
rvsdg.workspace = true
bytemuck.workspace = true
log.workspace = true
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
static_assertions.workspace = true
